--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "react-control-de-presupuesto",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://fabrijuncal.github.io/react-control-de-presupuesto/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
